--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Karakchiev Aleksandr <realrushen@gmail.com>"]
 python = "^3.10"
 fastapi = "^0.81.0"
 uvicorn = "^0.18.3"
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 
